--- CHANGELOG ---

--- PyFMI-2.5.6 ---
    * Fixed such that instance attributes 'name' and 'raw_name' in class ResultDymolaBinary
      are now attributes that consists of strings instead of bytes in Python 3.
    * Fixed issue with set_string when input was a list of strings in Python 3.
    * Fixed other bytes/string incompabilities that caused exceptions with
      Python 3.

--- PyFMI-2.5.5 ---
    * Changed default value of maxh to be computed based on ncp, start
      and stop time according to, maxh=(stop-start)/ncp (ticket:5858)
    * Changed default ncp value from '0' to '500' (ticket:5857)
    * Changed default value for the sparse solver in CVode (if the
      systemsize is >100 and the non-zero pattern is less than 15% then
      a sparse solver is used) (ticket:5666)
    * Changed default value for Jacobian compression (if CVode is used
      and the systemsize is >10 then Jacobian compression is used) (ticket:5666)
    * Added option to specify if the variable descriptions should be 
      stored or not in the result file (ticket:5846)
    * Fixed issue with estimating directional derivatives when the 
      structure info is not used and the matrix has zero dim (ticket:5836)

--- PyFMI-2.5.4 ---
    * Improved the performance of estimating directional derivatives
      (ticket:5569)
    * Added support for computing only a subset of interesting columns
      when considering the cpr seed (ticket:5825)
    * Fixed so that the log file is kept open during the initialization
      call (ticket:5823)
    * Added support for binary result saving for coupled CS simulations
      and switched the default storing option to binary (ticket:5820)
    * Changed default value of "linear_correction" to False for coupled
      CS simulations (ticket:5821)
    * Fixed issue with discrete couplings for coupled CS simulations
      (ticket:5822)

--- PyFMI-2.5.3 ---
    * Fixed wrong default value for FMUModelME1Extended (ticket:5801)

--- PyFMI-2.5.2 ---